# computer-club

./: CMakeLists.txt  README.md  club.cpp  club.hpp  delimiters.cpp  delimiters.hpp  events.cpp  events.hpp  events.txt  main.cpp  structs.cpp  structs.hpp  test_events.cpp  test_main.cpp  test_time_struct.cpp
expected_output/: out5.txt
input/: events.txt  inp2.txt  inp5.txt  inp6.txt  inp7.txt  time.txt
src/: club.cpp  club.hpp  events.cpp  events.hpp  guards.cpp  guards.hpp  main.cpp
tests/: CMakeLists.txt  test_events.cpp  test_main.cpp  test_time_struct.cpp
tests/expected_output/: out2.txt  out3.txt  out4.txt  out6.txt  out7.txt
tests/input/: inp3.txt  inp4.txt
